# perl-Amazon-Lambda-Runtime

./: .gitignore  COPYRIGHT  ChangeLog  Makefile.am  README.md  README.md.in  aclocal.m4  aws-cli.inc  configure.ac  directories.inc  gitignore  install-framework  make-a-perl  plambda-cpanfile  programs.inc  runtime-cpanfile-default
autotools/: ads_PERL_INCLUDES.m4  ads_PERL_MODULE.m4  ads_PROG_PERL.m4  am_build_mode.m4  ax_am_conditional_example.m4  ax_deps_check.m4  ax_distcheck_hack.m4
src/: Makefile.am
src/main/: Makefile.am
src/main/bash/: Makefile.am
src/main/perl/: Makefile.am
src/main/perl/lambda/: Makefile.am  bootstrap.in  plambda.pl.in
src/main/perl/lambda/lib/Amazon/Lambda/: Context.pm.in  Runtime.pm.in
src/main/perl/lib/: Makefile.am
src/main/perl/lib/Amazon/: Plambda.pm.in
src/main/perl/lib/Amazon/Plambda/: Buildspec.pm.in  Config.pm.in  Global.pm.in  Message.pm.in  Runtime.pm.in
